[package]
name = "cgroup-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["full"] }
prometheus = "0.13"
once_cell = "1.18"
walkdir = "2.5"
thiserror = "1.0"
anyhow = "1.0"
libc = "0.2"

