[package]
name = "cgroup-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

prometheus = "0.14"
once_cell = "1.21"
walkdir = "2.5"
thiserror = "2.0"
anyhow = "1.0"
libc = "0.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
